--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: GitHub Preview Rust Stack
+title: GitHub Rust Stack
 description: Docker Rust Container With Rocket & Warp
 show_downloads: true
 google_analytics:
