Updated document structure and content

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,70 @@
-title: GitHub Rust Stack
-description: Docker Rust Container With Rocket & Warp
+title: Rust Development Template
+description: Rust compiler and template projects
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
 
+
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme 
+  - jekyll-toc 
+
+# Added 26 July 2024
+# This is here to enable the parse_block_html feature for MD parsing in a details tag
+markdown: kramdown
+kramdown:
+  input: GFM
+  parse_block_html: true        # This is required to enable <details>  in combination with markdown syntax in it!
+                                # Because the Details tag is very picky with indention syntax here a working example
+                                # (Remove the first # to use this as example in your MD code)         
+# EXAMPLE                                
+#<details>  
+#  <summary>More information about ...
+#  </summary> <!-- On same line is failure -->
+#  
+## Picky Markdown in details
+#Because the Details tag is very picky with indention syntax this is a working example
+#- ss
+#	- ss
+#  
+### A subtitle
+#More usefull information...
+# 
+#  # Indention is parsing failure (space)
+#	# Indention is parsing failure (tab>
+#
+### Her it is okay againThis is okay! 
+#Your **_config requires** <br>
+#```markdown: kramdown``` <br>
+#``kramdown:`` <br>
+#`input: GFM` <br>					<!-- WARNING add one or more space is an error -->
+#``  parse_block_html: true `` <br>	<!-- But not with a double quote! -->
+#
+#
+#_End of **details** section_
+#</details>
 
 
+toc:
+  toc: true
+  toc_label: "Table of Contents"
+  toc_icon: "cog" # corresponding Font Awesome icon name no fa-prefix
+  toc_levels: "1..4" # which heading levels to include in the TOC
+  
+# Add this variable to your _config, it indicates the directory where the other Mark 
+# Down(MD) files can be found, so that Links in the left side bar can be created to these 
+# files. The '*.md' files will use this variable to automatic append to the links to the page.
+#
+# Note that to make the links in the left content page work you have to define theme 
+# (in order) to the top of the markdown file, like:
+#
+# ---
+# layout: default-c                         # Use this custom template layout!
+# RefPage: howto_create_A_dev_container     
+# RefPage: howto_create_A_dev_container     #'RefPage' indicates a link page displayed 
+#                                           # in the left content pane.
+# ---
+#
+BaseDir: /Howtos
+  
+port: 4002
