Minor update Theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
-title: Rust Development Template
-description: Rust compiler and template projects
+# A change in this file, NEEDS a Jekyll restart!
+#
+
+title: <font size="6"><span style="color:#FFD700">D</span>ocker <span style="color:#FFA500">T</span>emplate <span style="color:#FF7F50">S</span>tack Rust </font>
+description: <b><i><font size="3">A Docker container for Rust projects</span></font></i></b>
+
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
