Update _Config to include wsl home site

--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,10 @@ repository_name: Rust-Development-Template-Stack    # Update this(repository nam
 # includes home links for this page, leave blank in case of no Home links. 
 home_site_name: 
     - DTS
+    - WSL
 home_site_url: 
     - https://nicojane.github.io/Docker-Template-Stacks-Home
-
+    - https://nicojane.github.io/WSL-Template-Stacks-Home
 
 plugins:
   - jekyll-remote-theme 
