- Cleaned up the messy documentation, - Applied new layout

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-**/UnUsed/
+# Ignore any directory or file (at any level) starting with an underscore
+**/_*
+# EXCEPTION: allow the root-level folder '_layouts/' and the file: !_config.yml
+!/_layouts/
+!_config.yml
+
+# Ignore .snapshots directories everywhere
+**/.snapshots/**
+
+.DS_Store
 .njerepo
+.history
+
+**/UnUsed/
